@@ -1,8 +1,14 @@
+2006-12-18  Matt Johnston  <matt@ucc.asn.au>
+
+	* work.cc (get_revision_id): check that the workspace revision
+	exists here (so that codepaths such as "log" will also hit it).
+
 2006-12-16  Joel Rosdahl  <joel@rosdahl.net>
 
 	* po/sv.po: Corrections of Swedish translation.
 
 2006-12-16  Matt Johnston  <matt@ucc.asn.au>
+
 	* cmd_list.cc: ls_known, ls_changed: sort path output.
 
 2006-12-15  Nathaniel Smith  <njs@pobox.com>
